# flyio-test

./: Dockerfile  README.md  entrypoint.sh  fly.toml  nginx.conf.template
simple_app/: Dockerfile  fly.toml  pyproject.toml
static/: index.html
streamlit-app/: fly.toml  main.py  pyproject.toml
streamlit-app2/: fly.toml  main.py  pyproject.toml
