[project]
name = "simple-app"
version = "0.1.0"
description = ""
authors = [
    {name = "pajtas11",email = "pajtas11@gmail.com"}
]

[tool.poetry]
package-mode = false
packages = [{include = "simple_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = ">=1.52.2"
pandas = ">=2.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
